--- a/assets/styles/modules/gallery/gallery.scss
+++ b/assets/styles/modules/gallery/gallery.scss
@@ -2,6 +2,7 @@
   margin: 0 auto;
   max-height: 811px;
   overflow-y: scroll;
+  // width: 100%;
 
   @media (min-width: 786px) and (max-width: 1199px) {
     margin: 0 auto;
@@ -10,6 +11,18 @@
   @media screen and (max-width: 768px) {
     margin: 0 auto;
     max-height: 1030px;
+  }
+
+  .gutter-width {
+    width: 40px;
+
+    @media (min-width: 786px) and (max-width: 1199px) {
+      width: 30px;
+    }
+
+    @media screen and (max-width: 768px) {
+      width: 20px;
+    }
   }
 
   &-item {
@@ -26,12 +39,16 @@
 
       @media screen and (max-width: 768px) {
         height: auto;
-        width: 320px;
+        width: 145px;
       }
     }
 
     @media (min-width: 786px) and (max-width: 1199px) {
-      margin-bottom: 35px;
+      margin-bottom: 30px;
+    }
+
+    @media screen and (max-width: 768px) {
+      margin-bottom: 10px;
     }
   }
 
